--- a/base_screen/Code/presenter.swift.liquid
+++ b/base_screen/Code/presenter.swift.liquid
@@ -1,6 +1,6 @@
 import Foundation
 
-class {{ module_info.name }}ScreenPresenter: {{ module_info.name }}ScreenPresenterProtocol {
+final class {{ module_info.name }}ScreenPresenter: {{ module_info.name }}ScreenPresenterProtocol {
 
     unowned let viewInput: {{ module_info.name }}ScreenViewInput
     unowned let moduleOutput: {{ module_info.name }}ScreenModuleOutput
