--- a/base_screen/Code/view.swift.liquid
+++ b/base_screen/Code/view.swift.liquid
@@ -1,6 +1,6 @@
 import Foundation
 import UIKit
 
-class {{ module_info.name }}ScreenView: BaseScreenView {
+final class {{ module_info.name }}ScreenView: BaseScreenView {
     
 }
