--- a/base_screen/Code/viewcontroller.swift.liquid
+++ b/base_screen/Code/viewcontroller.swift.liquid
@@ -1,7 +1,7 @@
 import Foundation
 import UIKit
 
-class {{ module_info.name }}ScreenViewController: BaseViewController, BaseViewProtocol {
+final class {{ module_info.name }}ScreenViewController: BaseViewController, BaseViewProtocol {
 
     typealias ViewClass = {{ module_info.name }}ScreenView
 
