--- a/base_screen/Code/initializer.swift.liquid
+++ b/base_screen/Code/initializer.swift.liquid
@@ -4,19 +4,22 @@ import Swinject
 final class {{ module_info.name }}ScreenInitializer {
 
     class func initialize(moduleOutput: {{ module_info.name }}ScreenModuleOutput) -> UIViewController? {
-        guard let viewInput = appContainer.resolve({{ module_info.name }}ScreenViewInput.self) else { return nil }
+        guard let viewInput = appContainer?.resolve({{ module_info.name }}ScreenViewInput.self) else { return nil }
 
-        viewInput.viewOutput = appContainer.resolve({{ module_info.name }}ScreenPresenterProtocol.self, arguments: viewInput, moduleOutput)
+        viewInput.viewOutput = appContainer?.resolve(
+            {{ module_info.name }}ScreenPresenterProtocol.self, 
+            arguments: viewInput, moduleOutput
+        )
         return viewInput.viewController()
     }
 
     class func register(for container: Container) {
 
-        container.register({{ module_info.name }}ScreenPresenterProtocol.self) { r, viewInput, moduleOutput in
+        container.register({{ module_info.name }}ScreenPresenterProtocol.self) { _, viewInput, moduleOutput in
             return {{ module_info.name }}ScreenPresenter(viewInput: viewInput, moduleOutput: moduleOutput)
         }
 
-        container.register({{ module_info.name }}ScreenViewInput.self) { r in
+        container.register({{ module_info.name }}ScreenViewInput.self) { _ in
             {{ module_info.name }}ScreenViewController(nibName: "{{ module_info.name }}ScreenView", bundle: nil)
         }
     }
